<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:src="@drawable/ic_social_chat"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Connect With Us"
            android:textSize="@dimen/value_20sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/value_12dp"
            android:layout_marginBottom="@dimen/value_40dp"
            android:textColor="@color/connect_text_color"/>

        <RelativeLayout
            android:id="@+id/btnFB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_40dp"
            android:layout_marginRight="@dimen/value_40dp"
            android:layout_marginBottom="@dimen/value_15dp"
            android:clickable="true"
            android:background="@color/social_fb_color"
            android:padding="@dimen/value_5dp">

            <ImageView
                android:id="@+id/fbImgView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_social_fb"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:layout_marginBottom="@dimen/value_10dp"
                android:layout_marginRight="@dimen/value_20dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/social_separator_color"
                android:layout_alignBottom="@+id/fbImgView"
                android:layout_toRightOf="@+id/fbImgView"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/value_3dp"
                android:layout_marginBottom="@dimen/value_3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_facebook"
                android:textColor="@color/white"
                android:textSize="@dimen/value_18sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_40dp"
            android:layout_marginRight="@dimen/value_40dp"
            android:layout_marginBottom="@dimen/value_15dp"
            android:clickable="true"
            android:background="@color/social_linked_in_color"
            android:padding="@dimen/value_5dp">

            <ImageView
                android:id="@+id/linkedInImgView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_social_linked_in"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:layout_marginBottom="@dimen/value_10dp"
                android:layout_marginRight="@dimen/value_20dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/social_separator_color"
                android:layout_alignBottom="@+id/linkedInImgView"
                android:layout_toRightOf="@+id/linkedInImgView"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/value_3dp"
                android:layout_marginBottom="@dimen/value_3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_linked_in"
                android:textColor="@color/white"
                android:textSize="@dimen/value_18sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_40dp"
            android:layout_marginRight="@dimen/value_40dp"
            android:layout_marginBottom="@dimen/value_15dp"
            android:clickable="true"
            android:background="@color/social_twitter_color"
            android:padding="@dimen/value_5dp">

            <ImageView
                android:id="@+id/twitterImgView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_social_twitter"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:layout_marginBottom="@dimen/value_10dp"
                android:layout_marginRight="@dimen/value_20dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/social_separator_color"
                android:layout_alignBottom="@+id/twitterImgView"
                android:layout_toRightOf="@+id/twitterImgView"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/value_3dp"
                android:layout_marginBottom="@dimen/value_3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_twitter"
                android:textColor="@color/white"
                android:textSize="@dimen/value_18sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnYoutube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_40dp"
            android:layout_marginRight="@dimen/value_40dp"
            android:clickable="true"
            android:background="@color/social_youtube_color"
            android:padding="@dimen/value_5dp">

            <ImageView
                android:id="@+id/youtubeImgView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_social_youtube"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:layout_marginBottom="@dimen/value_10dp"
                android:layout_marginRight="@dimen/value_20dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/social_separator_color"
                android:layout_alignBottom="@+id/youtubeImgView"
                android:layout_toRightOf="@+id/youtubeImgView"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/value_3dp"
                android:layout_marginBottom="@dimen/value_3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_youtube"
                android:textColor="@color/white"
                android:textSize="@dimen/value_18sp"
                android:textStyle="bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btnInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/value_40dp"
            android:layout_marginRight="@dimen/value_40dp"
            android:layout_marginTop="@dimen/value_15dp"
            android:clickable="true"
            android:background="@color/social_linked_in_color"
            android:padding="@dimen/value_5dp">

            <ImageView
                android:id="@+id/instagramImgView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_social_linked_in"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/value_20dp"
                android:layout_marginTop="@dimen/value_10dp"
                android:layout_marginBottom="@dimen/value_10dp"
                android:layout_marginRight="@dimen/value_20dp"/>

            <View
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@color/social_separator_color"
                android:layout_alignBottom="@+id/instagramImgView"
                android:layout_toRightOf="@+id/instagramImgView"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/value_3dp"
                android:layout_marginBottom="@dimen/value_3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/text_instagram"
                android:textColor="@color/white"
                android:textSize="@dimen/value_18sp"
                android:textStyle="bold"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>

</RelativeLayout>